--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: npm run (*)android-full-debug-build
+    - name: CreateDebugAPK
+      run: npm run android-full-debug-build
