--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-accordion": "^1.0.1",
+    "react-native-config": "^0.12.0",
+    "react-native-dotenv": "^0.2.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
